# cs492I-project-backend

./: .env.example  .gitignore  README.md  docker-compose.yml
docker/: pytorch-dockerfile
docker/model/: worker.py
examples/: new_task.py
server/: .env.example  README.md  pyproject.toml
server/server/: __init__.py  main.py
